feat(parser): add options & location

--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -8,3 +8,6 @@ repository = "https://github.com/nanjingboy/muse"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+strum = "0.24"
+strum_macros = "0.24"
+derivative = "2.2.0"
