--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "git@github.com:nanjingboy/muse.git",
   "author": "Tom.Huang <hzlhu.dargon@gmail.com>",
   "scripts": {
+    "lint:rust": "cargo fmt --",
+    "lint:toml": "taplo format",
+    "lint": "npm-run-all lint:rust lint:toml",
     "test": "cargo test",
     "prepare": "husky install"
   },
@@ -21,6 +24,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@taplo/cli": "^0.3.2",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.7"
+    "lint-staged": "^12.3.7",
+    "npm-run-all": "^4.1.5"
   }
 }
