--- a/crates/macros/Cargo.toml
+++ b/crates/macros/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/nanjingboy/muse"
 syn = "1.0"
 quote = "1.0"
 proc-macro2 = "1.0"
+convert_case = "0.5.0"
 
 [lib]
 proc-macro = true
