--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -10,5 +10,8 @@ repository = "https://github.com/nanjingboy/muse"
 [dependencies]
 strum = "0.24"
 strum_macros = "0.24"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 derivative = "2.2.0"
+lazy_static = "1.4.0"
 muse-macros = { path = "../macros" }
