--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,4 @@ panic = "abort"
 lto = true
 
 [workspace]
-members = [
-  "./crates/parser",
-  "./crates/traverse",
-  "./crates/types",
-  "./crates/generator",
-  "./crates/macros",
-]
+members = ["./crates/parser", "./crates/macros"]
