--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -12,4 +12,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 lazy_static = "1.4.0"
 fancy-regex = "0.8.0"
+thiserror = "1.0"
 muse-macros = { path = "../macros" }
